# Apparel-desktop-version

./: .env  .gitignore  FINAL-SOLUTION.md  FINAL-WORKING-SOLUTION.md  FIXED-SOLUTION.md  INSTALLATION.md  MULTIPLE-INSTANCE-FIX.md  QUICK-START.md  README.md  READY-FOR-DOWNLOAD.md  build.sh  debug-app.sh  diagnose.sh  electron-main.ts  launch-app.sh  package-lock.json  package.json  setup.sh  test-app.sh  test-backend.js  test.html  tsconfig.app.json  tsconfig.electron.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: tauri-windows.yml
server/: Cargo.toml  package-lock.json  package.json
server/prisma/: dev.db  schema.prisma
server/prisma-client-rust/src/: lib.rs
server/prisma/migrations/20250718204936_init/: migration.sql
server/prisma/migrations/20250718212440_add_product_order/: migration.sql
server/prisma/migrations/20250718220001_add_sample_model/: migration.sql
server/prisma/migrations/20250718220851_add_design_file_model/: migration.sql
server/src/: index.ts  init-db.ts  lib.rs  prisma.rs
server/src/graphql/: resolvers.ts  schema.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: AuthGate.tsx  CostingCalculator.tsx  DashboardLayout.tsx  ErrorBoundary.tsx  InventoryManagement.tsx  Login.tsx  OrderManagement.tsx  ProductDevelopment.tsx  ProductionScheduler.tsx  TestComponent.tsx
src/contexts/: AuthContext.tsx
src/lib/: api.ts
src/pages/: Index.tsx  LoginPage.tsx  NotFound.tsx
(+5 files in other folders)
